--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis XV - Valentina</title>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Alex+Brush&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://thezanax.github.io/15-A-os/Styles.css">
 </head>
 <body>
     <!-- Sección Portada -->
@@ -158,4 +158,5 @@ window.onclick = function(event) {
         cerrarCuenta();
     }
 }
+
 </script>
