--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav><button class="btn-mapa" onclick="irAContador()">Fecha</button></nav>
         </article>
     </section>
-
+<audio src="https://thezanax.github.io/15-A-os/Ed Sheeran - photograph  sub español.mp3" autoplay loop></audio>
     <!-- Sección Contador -->
     <section class="contador-seccion" id="contador-seccion">
         <article class="contador-contenedor">
@@ -160,3 +160,4 @@ window.onclick = function(event) {
 }
 
 </script>
+
