--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav><button class="btn-mapa" onclick="irAContador()">Fecha</button></nav>
         </article>
     </section>
-<audio src="https://thezanax.github.io/15-A-os/Ed Sheeran - photograph  sub español.mp3" autoplay loop></audio>
+<audio src="https://thezanax.github.io/15-A-os/Ed%20Sheeran%20-%20photograph%20%20sub%20espa%C3%B1ol.mp3" autoplay loop></audio>
     <!-- Sección Contador -->
     <section class="contador-seccion" id="contador-seccion">
         <article class="contador-contenedor">
@@ -160,4 +160,5 @@ window.onclick = function(event) {
 }
 
 </script>
+
 
