--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Mis XV - Valentina</title>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Alex+Brush&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://thezanax.github.io/15-A-os/Styles.css">
+    <audio src="https://thezanax.github.io/15-A-os/Ed Sheeran - photograph  sub español.mp3" autoplay loop></audio>
 </head>
 <body>
     <!-- Sección Portada -->
@@ -20,7 +21,6 @@
             <nav><button class="btn-mapa" onclick="irAContador()">Fecha</button></nav>
         </article>
     </section>
-<audio src="https://thezanax.github.io/15-A-os/Ed%20Sheeran%20-%20photograph%20%20sub%20espa%C3%B1ol.mp3" autoplay loop></audio>
     <!-- Sección Contador -->
     <section class="contador-seccion" id="contador-seccion">
         <article class="contador-contenedor">
@@ -160,5 +160,6 @@ window.onclick = function(event) {
 }
 
 </script>
+
 
 
