--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mis XV - Valentina</title>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Alex+Brush&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://thezanax.github.io/15-A-os/Styles.css">
-    <audio src="https://thezanax.github.io/15-A-os/Ed Sheeran - photograph  sub español.mp3" autoplay loop></audio>
+    <audio src="https://thezanax.github.io/15-A-os/photograph.mp3" autoplay loop></audio>
 </head>
 <body>
     <!-- Sección Portada -->
@@ -160,6 +160,7 @@ window.onclick = function(event) {
 }
 
 </script>
+
 
 
 
