--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis XV - Valentina</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap" rel="stylesheet">   
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Alex+Brush&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://thezanax.github.io/15-A-os/Styles.css">
 <audio id="bgMusic" loop autoplay>
-  <source src="https://thezanax.github.io/15-A-os/photograph.mp3" type="audio/mpeg">
+  <source src="https://thezanax.github.io/15-A-os/IGottaFeeling.mp3" type="audio/mpeg">
 </audio>
 </head>
 <body>
@@ -23,7 +26,6 @@
             <button class="btn-mapa" onclick="irAContador(); iniciarMusica();">Fecha</button>
         </article>
     </section>
-    <!-- Sección Contador -->
     <section class="contador-seccion" id="contador-seccion">
         <article class="contador-contenedor">
             <h3 class="fecha-titulo">Sábado</h3>
